# audiobot

./: .gitignore  README.md  conda-env-audio.yaml  environment.yml  pyproject.toml  requirements.txt
audiobot/: .gitignore  cli.py  config.py  core.py  memory.py  pyproject.toml  requirements.txt
audiobot/agents/: litserve_app.py
audiobot/ai/: __init__.py  advisor.py
audiobot/pipeline/: __init__.py  datasets.py  models.py  preprocess.py  train_noise.py  vertex_job.py
audiobot/processing/: clean.py  utils.py
audiobot/skills/: __init__.py  clean.py  inspect.py  ml_denoise.py  separate.py  transcribe.py
audiobot/stems/: demucs.py
audiobot/sync/: gcs.py  ipfs.py
audiobot/web/: app.py  litserve_app.py  verses_default.txt
audiobot/web/static/: app.js  style.css
audiobot/web/templates/: history.html  index.html  result.html
data/: verses.sample.txt
scripts/: batch-clean.ps1  batch-master.ps1  bootstrap-lightning.sh  build-standalone.ps1  clean-audio.ps1  gcs-rsync-pull.ps1  inspect-audio.ps1  master-audio.ps1  run-web.ps1  separate-stems.ps1  ssh-lightning.ps1
scripts/deploy/: deploy_lightning.ps1  init_git_remote.sh  setup_conda_vm.sh
scripts/flstudio/: backup-flp.ps1  index-flp.ps1
scripts/systemd/: hsve-lit.service  hsve-web.service
scripts/windows/: flp_intake.ps1  process_now.ps1
